log
Thu 31 Aug 2023 04:11:48 PM UTC: 
 tests:  0|6
total_score: 0/70
85cdccb
Wed 06 Sep 2023 09:56:54 PM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
b32a470
Wed 06 Sep 2023 09:58:37 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:58:14: error: ‘*nuevoMapa.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   58 |     nuevoMapa->buckets[i]=NULL;
      |     ~~~~~~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
24d9ab6
Wed 06 Sep 2023 10:23:18 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
521b718
Wed 06 Sep 2023 10:27:23 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:12: error: ‘capacity’ undeclared (first use in this function)
   43 |   hash(key,capacity)
      |            ^~~~~~~~
hashmap.c:43:12: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:43:21: error: expected ‘;’ before ‘}’ token
   43 |   hash(key,capacity)
      |                     ^
      |                     ;
   44 | }
      | ~                    
Compilation failed
2db7c7f
Wed 06 Sep 2023 10:27:32 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:12: error: ‘capacity’ undeclared (first use in this function)
   43 |   hash(key,capacity);
      |            ^~~~~~~~
hashmap.c:43:12: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d48100c
Wed 06 Sep 2023 10:30:41 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:15: error: called object ‘hash’ is not a function or function pointer
   43 |   long hash = hash(key,map->capacity);
      |               ^~~~
hashmap.c:43:8: note: declared here
   43 |   long hash = hash(key,map->capacity);
      |        ^~~~
Compilation failed
c266299
Wed 06 Sep 2023 10:31:19 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:8: error: unused variable ‘valorHash’ [-Werror=unused-variable]
   43 |   long valorHash = hash(key,map->capacity);
      |        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
dc8d3b4
Wed 06 Sep 2023 10:35:30 PM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|5
total_score: 10/70
730d52d
Wed 06 Sep 2023 10:44:19 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
322caac
Wed 06 Sep 2023 11:21:17 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
e5db44e
